<resources>
    <string name="app_name">MovieLib</string>
    <string name="app_title">My movie library</string>
    <string name="add_movie">Add movie</string>
    <string name="subject_hint">Enter movie title</string>
    <string name="body_hint">Enter movie description</string>
    <string name="url_hint">Enter image URL</string>
    <string name="show_image">Load Image</string>
    <string name="cancel">Cancel</string>
    <string name="back">Return to movie list</string>
    <string name="save">Save</string>
    <string name="search_hint">Enter title to search</string>
    <string name="exit">Exit</string>
    <string name="delete_all">Delete all movies</string>
    <string name="edit_movie">Edit</string>
    <string name="delete_movie">Delete</string>
    <string name="add_movie_manual">Add manually</string>
    <string name="add_movie_from_web">Add from Internet</string>
    <string name="msg_mandatory_subject">Movie title cannot be empty</string>
    <string name="msg_n_title_exists">Movie title already exits</string>
    <string name="msg_delete_all_alert">About to delete all movies in database</string>
    <string name="msg_delete_movie_alert">About to delete</string>
    <string name="msg_continue_alert">Continue ?</string>
    <string name="msg_action_yes">Yes</string>
    <string name="msg_action_no">No</string>
    <string name="msg_delete_cancelled">Delete cancelled</string>
    <string name="msg_n_db_img">Image is saved locally</string>
    <string name="msg_n_movies_deleted">Movies deleted</string>
    <string name="msg_n_movie_deleted">Movie deleted</string>
    <string name="msg_n_movie_added">Movie data was saved</string>
    <string name="msg_n_filter_title">Enter title to limit list</string>
    <string name="msg_about_to_delete">About to delete </string>
    <string name="msg_no_image_url">Empty url</string>
    <string name="msg_invalid_image_url">Invalid image url</string>
    <string name="msg_enter_string_for_search">Enter title to search for</string>
    <string name="msg_movie_not_found">Movie not found</string>
    <string name="msg_click_to_save">To save - click on a movie</string>
    <string name="msg_no_internet_access">No internet access. Please check your connection</string>
    <string name="msg_error_loading_list">Could not load list. Try again later.</string>
    <string name="msg_error_loading_image">Image not found</string>
    <string name="msg_error_url_image_mismatch">Url does not match image</string>
    <string name="msg_no_plot">Could not find plot info</string>
    <string name="msg_err_download_plot">Could not download plot</string>
    <string name="sort_menu">Sort by</string>
    <string name="sort_by_subject">Title</string>
    <string name="sort_by_rating">Rating</string>
    <string name="sort_by_seen">Not seen first</string>
    <string name="empty_movie_list_msg">Your list is empty. Press ADD to add new movies</string>
    <string name="set_watched">Set Watched</string>
    <string name="set_unwatched">Set Not wathced</string>
    <string name="rate_movie">Rate movie</string>
    <string name="share_subject">Have you seen</string>
    <string name="share_msg">I thought it might interest you.</string>
    <string name="share_msg1">is a movie</string>
    <string name="share_msg2">Its about</string>
    <string name="msg_downloading">Downloading...</string>
    <string name="msg_downloading_plot">Retrieving plot info...</string>
    <string name="msg_wait">Please wait</string>
    <string name="msg_editing_movie">Editing </string>
    <string name="settings_menu">Settings</string>
    <string name="save_image">Enable/Disable image saving</string>
    <string name="msg_alert_settings">About to</string>
    <string name="msg_alert_save_image">image saving</string>
    <string name="msg_alert_autoload_image">image auto download</string>
    <string name="msg_alert_action_enable">ENABLE</string>
    <string name="msg_alert_action_disable">DISABLE</string>
    <string name="msg_enabled">Enabled</string>
    <string name="msg_disabled">Disabled</string>
    <string name="auto_download">Enable/Disable image download</string>
</resources>
