<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_add_edit_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myapps.and.movielib.AddEditMovie"
    android:weightSum="11"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="4">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/eSubjectET"
            android:hint="@string/subject_hint"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/eBodyET"
            android:hint="@string/body_hint"
            android:inputType="textMultiLine"
            android:layout_weight="2"
            android:layout_marginTop="15dp"
            android:maxLines="3"
            android:minLines="3" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="9"
        android:gravity="center_vertical">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:ems="10"
            android:id="@+id/eUrlET"
            android:hint="@string/url_hint"
            android:layout_weight="7"
            android:gravity="bottom"
            android:layout_marginRight="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:maxLines="1" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/downloading"
            android:id="@+id/eShowImageIB"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:visibility="visible"
            android:layout_gravity="center"
            android:background="@android:color/transparent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pin"
            android:id="@+id/eAttachedIV"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            android:clickable="false"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/movieIV"
        android:layout_weight="4"
        android:visibility="invisible"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/undo"
            android:id="@+id/eCancelIB"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:background="@android:color/transparent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/sharing"
            android:id="@+id/eShareIB"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:background="@android:color/transparent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/saving"
            android:id="@+id/eSaveIB"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:background="@android:color/transparent" />

    </LinearLayout>
</LinearLayout>
